# gwtm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SUMMARY.md  install.sh  install_dev.sh  pyproject.toml  sample.gwtmrc  setup.py  test.py  tests.py
src/: __init__.py  ide.py  main.py
