[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwtm"
version = "0.1.0"
description = "Git WorkTree Manager - A tool for managing Git worktrees with IDE integration"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
gwtm = "gwtm.main:main"

[tool.setuptools]
package-dir = {"gwtm" = "src"}